--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
                         <i class="fas fa-eye"></i>
                     </div>
                     <div class="field button">
-                        <input type="submit" value="Sign Up">
+                        <input type="submit" value="Login">
                     </div>
                 
             </form>
